fix: change the overflow behavior in ProcessCard

--- a/src/components/blocks/ProcessBlock/styles/ProcessCard.module.scss
+++ b/src/components/blocks/ProcessBlock/styles/ProcessCard.module.scss
@@ -10,7 +10,7 @@
   border: $dark-border;
   border-radius: $container-border-raidus;
   box-shadow: $container-box-shadow;
-  overflow: hidden;
+  overflow-y: hidden;
   transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 
   // Tablet Styles //
@@ -19,7 +19,7 @@
   }
 
   &.open {
-    max-height: 50vh;
+    max-height: 90vh;
   }
 }
 
@@ -73,25 +73,43 @@
 .horizontal-line {
   width: 100%;
   height: 1px;
-  margin: 1.875em 0em;
   background: $black-color;
   border: none;
+  margin: 1.875em 0em;
+  margin-top: 0.875em;
+
+  @include respond-to(tablet) {
+    margin-top: 1.375em;
+  }
+  @include respond-to(desktop-s) {
+    margin-top: 1.875em;
+  }
 }
 
 .inner-content {
   max-height: 0;
+  height: 0;
   opacity: 0;
   transform: translateY(-10px);
   transition: all 0.5s ease-in-out;
+  margin-top: 1em;;
 
   &.open {
     max-height: 90vh;
     opacity: 1;
+    height: max-content;
     transform: translateY(0);
+    overflow: auto;
 
-    // Mobile-Large Styles //
-    @include respond-to(mobile-l) {
+    // Tablet Styles //
+    @include respond-to(tablet) {
       max-height: 50vh;
+      margin-top: 0.5em;
+    }
+
+    // Desktop Styles //
+    @include respond-to(desktop-s) {
+      margin-top: 0;
     }
   }
 }
